feat: 完成首页与排序功能

--- a/extensions/discountCoupon/snippets/black_discount_coupon.liquid
+++ b/extensions/discountCoupon/snippets/black_discount_coupon.liquid
@@ -69,7 +69,7 @@
     <div class='contain'>
       <span class='code'>{{ discountCouponCode }}</span>
       <button class='apply btn' onclick='handleClickApply({{ discountCouponCode | json }})'>APPLY</button>
-      <button class='applied btn none'>APPLIED</button>
+      <button class='applied btn none'onclick='handleClickApply({{ discountCouponCode | json }})'>APPLIED</button>
     </div>
   </div>
 </div>
