--- a/extensions/discountCoupon/blocks/discount_coupon.liquid
+++ b/extensions/discountCoupon/blocks/discount_coupon.liquid
@@ -1,5 +1,6 @@
 <head>
   <script src='{{ 'discount_coupon.js' | asset_url }}' defer></script>
+  <script src='https://unpkg.com/axios/dist/axios.min.js' defer></script>
   {{ 'discount_coupon.css' | asset_url | stylesheet_tag }}
 </head>
 
