--- a/app/global.style.css
+++ b/app/global.style.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+}
+
 .toast {
   display: none;
   position: fixed;
@@ -20,4 +30,10 @@
 }
 .toast-show {
   display: block;
+}
+
+/* 移除表格第一列(勾选框一列) */
+.no-select-table-contain tr > td:first-child,
+.no-select-table-contain tr > th:first-child {
+  display: none;
 }
